// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationItemButton it should render button with onclick null when disabled 1`] = `
<li
  className="NavigationItemButton disabled"
  onClick={null}
>
  <Svg
    icon="<svg></svg>"
  />
</li>
`;

exports[`NavigationItemButton it should render button with onclick null when disabled 2`] = `
<li
  className="NavigationItemButton"
  onClick="clicked"
>
  <Svg
    icon="<svg></svg>"
  />
</li>
`;
